# serdecompat

./: .gitignore  .ruff.toml  pyproject.toml
src/serdecompat/: __init__.py  _core.py  main.py
tests/: test_abc_containers.py  test_literals.py  test_scalars_and_unions.py  test_schema_types.py  test_tuples.py
